# cbeta_scraper

./: .flake8  README.md  cbeta_scraper.py  last_checkpoint.csv  logging.yml  pyproject.toml  setup.py
selenium_scraper/: cbeta.py  utils.py
