[tool.poetry]
name = "cbeta-scraper"
version = "0.1.0"
description = ""
authors = ["imzqqq <imzqqq@hotmail.com>"]
readme = "README.md"
packages = [{include = "cbeta_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
chromedriver-autoinstaller = "^0.4.0"
selenium = "^4.7.2"
pandas = "^1.5.2"
geckodriver-autoinstaller = "^0.1.0"
PyYAML = "^6.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
